--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.6
-envlist = pep8
+envlist = pep8,flask
 skipsdist = True
 
 [testenv]
@@ -13,3 +13,6 @@ whitelist_externals = find
 
 [flake8]
 exclude =  .venv,.git,.tox,dist,doc,*lib/python*,*egg,build,tools,releasenotes
+
+[testenv:flask]
+commands = python nomanskycraft/app.py
